# plants_mvp

./: .flake8  .pre-commit-config.yaml  Makefile  docker-compose.dev.yaml  pyproject.toml
src/: manage.py
src/common/: bit_handel_monkey_patch.py  serializers.py
src/core/: urls.py
src/core/settings/: __init__.py  base.py
src/plants/: __init__.py  admin.py  apps.py  urls.py  views.py
src/plants/migrations/: 0001_initial.py
src/plants/models/: plants.py
src/plants/serializers/: plants.py
